# egg-smol-benchmark

./: Cargo.toml  README.md  benchmarks-math.csv  plot.py
src/: lambda.rs  main.rs  math.rs  math_seminaive.rs
src/egglog/: lambda_full.egg  math_ac_10.egg  math_full.egg  math_full_copy.egg
