[package]
name = "egg-smol-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.9.0"
egg-smol = { git = "https://github.com/mwillsey/egg-smol" }
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-rational = "0.4.0"
num-traits = "0.2.15"
log = "0.4"
env_logger = "0.9"
structopt = { version = "0.3", default-features = false }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
